--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "0d98a381-ea1e-4c3d-a579-f3ee20d08a83"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
